--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
      <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 </head>
 <body>
+     {% include nav.html %}
      {{content}}
 </body>
 </html>
