--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
      <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 </head>
 <body>
-     {% include nav.html %}
-     {{content}}
+     <div class="wrapper">
+          {% include nav.html %}
+          {{content}}
+     </div>
 </body>
 </html>
