Added crude responsive navigation

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <section class="nav clearfix">
      <div class="wrapper clearfix">
           <a href="index.html" class="logo">The Universal Dev</a>
+          <a href="#" class="menu"><i class="fa fa-bars"></i></a>
           <nav class="navigation clearfix">
                <ul>
                     <li><a href="design.html">Design</a></li>
