--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,8 @@
           {% include nav.html %}
           {{content}}
      </div>
+     
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="js/action.js"></script>
 </body>
 </html>
