Finished the Design, Code, and Videos pages and the Jekyll Filtering

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,10 @@
      <div class="wrapper">
           {% include nav.html %}
           {{content}}
+          {% include links.html %}
+          {% include footer.html %}
      </div>
-     
+
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
      <script src="js/action.js"></script>
 </body>
