Finished the content (Need to do Illustrations)

--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,8 +1,8 @@
 <section class="links">
      <div class="wrapper">
-          <a href="design.html" class="link design"><i class="fa fa-pencil"></i> <p>I'd like design please</p></a>
-          <a href="code.html" class="link code"><i class="fa fa-code"></i> <p>Code, anyone?</p></a>
-          <a href="videos.html" class="link video"><i class="fa fa-tv"></i> <p>I like to binge</p></a>
+          <a href="{{site.baseurl}}/design" class="link design"><i class="fa fa-pencil"></i> <p>I'd like design please</p></a>
+          <a href="{{site.baseurl}}/code" class="link code"><i class="fa fa-code"></i> <p>Code, anyone?</p></a>
+          <a href="{{site.baseurl}}/videos" class="link video"><i class="fa fa-tv"></i> <p>I like to binge</p></a>
           <br>
           <a href="https://www.youtube.com/theuniversaldev" target="_blank" class="link youtube"><i class="fa fa-youtube link"></i> <p>YouTube</p></a>
           <a href="https://www.github.com/theuniversaldev" target="_blank" class="link github"><i class="fa fa-github link"></i> <p>GitHub</p></a>
