--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <section class="nav clearfix">
      <div class="wrapper clearfix">
-          <a href="index.html" class="logo">The Universal Dev</a>
+          <a href="{{site.baseurl}}/index" class="logo">The Universal Dev</a>
           <a href="#" class="menu"><i class="fa fa-bars"></i></a>
           <nav class="navigation clearfix">
                <ul>
-                    <li><a href="design.html">Design</a></li>
-                    <li><a href="code.html">Code</a></li>
-                    <li><a href="videos.html">Videos</a></li>
+                    <li><a href="{{site.baseurl}}/design">Design</a></li>
+                    <li><a href="{{site.baseurl}}/code">Code</a></li>
+                    <li><a href="{{site.baseurl}}/videos">Videos</a></li>
                     <li><a href="https://www.youtube.com/user/theuniversaldev" target="_blank"><i class="fa fa-youtube"></i></a></li>
                     <li><a href="https://www.github.com/theuniversaldev" target="_blank"><i class="fa fa-github"></i></a></li>
                </ul>
