--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>The Universal Dev</title>
-     <link rel="stylesheet" href="css/application.css">
+     <link rel="stylesheet" href="{{site.baseurl}}/css/application.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 </head>
@@ -18,6 +18,6 @@
      </div>
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     <script src="js/action.js"></script>
+     <script src="{{site.baseurl}}/js/action.js"></script>
 </body>
 </html>
