--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
      <link rel="stylesheet" href="{{site.baseurl}}/css/application.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
+     <link rel="icon" href="{{site.baseurl}}/assets/favicon.ico" type="image/x-icon"/>
+     <link rel="shortcut icon" href="{{site.baseurl}}/assets/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
      <div class="wrapper">
